[package]
name = "cpt"
version = "0.1.0"
description = "A tool for archiving files and directories and extracting several archive formats."
repository = "https://github.com/YokoyamaKosuke/CPT"
readme = "README.md"
authors = [
    "Yokoyama Kosuke <a9500186@gmail.com"
]
categories = ["command-line-utilities", "compression"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
